k8s/inventory.client/prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-client
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: inventory-client
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory-client
  name: inventory-client
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: inventory-client
  template:
    metadata:
      labels:
        app: inventory-client
    spec:
      containers:
      - env:
        - name: INSTANCE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: RABBITMQ_HOST
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_HOST
              name: inventory-client-configmap
        - name: RABBITMQ_PORT
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_PORT
              name: inventory-client-configmap
        - name: RABBITMQ_USERNAME
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_USERNAME
              name: inventory-client-configmap
        - name: RABBITMQ_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_PASSWORD
              name: inventory-client-configmap
        image: hylmar/inventory-client:1.0.10-SNAPSHOT
        imagePullPolicy: Always
        name: inventory-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory-client-green
  name: inventory-client-green
spec:
  replicas: 0
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: inventory-client-green
  template:
    metadata:
      labels:
        app: inventory-client-green
    spec:
      containers:
      - env:
        - name: INSTANCE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: RABBITMQ_HOST
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_HOST
              name: inventory-client-configmap
        - name: RABBITMQ_PORT
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_PORT
              name: inventory-client-configmap
        - name: RABBITMQ_USERNAME
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_USERNAME
              name: inventory-client-configmap
        - name: RABBITMQ_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_PASSWORD
              name: inventory-client-configmap
        image: hylmar/inventory-client:1.0.10-SNAPSHOT
        imagePullPolicy: Never
        name: inventory-client-green
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: inventory-client-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: inventory-client
            port:
              number: 8080
        path: /inventory-client(/|$)(.*)
        pathType: Prefix
